Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35906

Assert when accessing a property of a QQmlPropertyCache

XMLWordPrintable

    • bf3dfe64068d76f98a2176530e1158d5143e09b2 (qtdeclarative)

      When running the attached test code against today's stable branch i get
      PASS : GSettings::initTestCase()
      QDEBUG : GSettings::test_a() A QQmlPropertyMap(0x18c4740)
      QFATAL : GSettings::test_a() ASSERT: "cache" in file /home/tsdgeos/qt5/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp, line 628
      FAIL! : GSettings::test_a() Received a fatal error.
      Loc: [Unknown file(0)]

        1. qqmlpropertymap.zip
          2 kB
          Albert Astals Cid (Canonical)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shausman Simon Hausmann
            tsdgeos_canonical Albert Astals Cid (Canonical) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes